edit_box: fix horizontal size too large; fix resetting element style each frame

--- a/src/client/main.css
+++ b/src/client/main.css
@@ -125,7 +125,6 @@ canvas {
 .glovui_dynamic {
   font-size: 1em;
   position: absolute;
-  text-align: center;
   opacity: 1.0;
   pointer-events: auto;
 }
